syntax = "proto3";

option go_package = "github.com/s7techlab/gateway/events";
package events;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "peer/chaincode_event.proto";

service ChaincodeEvent {
  rpc EventStream (google.protobuf.Empty) returns (stream protos.ChaincodeEvent) {
    option (google.api.http) = {
      get: "/event"
    };
  };
}